--- a/proj1/bin/songLab/view/SongLab.fxml
+++ b/proj1/bin/songLab/view/SongLab.fxml
@@ -11,9 +11,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="745.0" prefWidth="942.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1"
-fx:controller="songLabController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="745.0" prefWidth="942.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="songLabController">
    <children>
       <SplitPane dividerPositions="0.29797979797979796" layoutX="161.0" layoutY="120.0" prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <items>
@@ -25,8 +23,8 @@ fx:controller="songLabController">
                            <children>
                               <TableView prefHeight="294.4" prefWidth="173.6" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                 <columns>
-                                  <TableColumn prefWidth="135.2000029683113" text="Song" />
-                                  <TableColumn prefWidth="140.80003356933594" text="Artist" />
+                                  <TableColumn fx:id="SongList" prefWidth="135.2000029683113" text="Song" />
+                                  <TableColumn fx:id="ArtistList" prefWidth="140.80003356933594" text="Artist" />
                                 </columns>
                               </TableView>
                            </children>
@@ -59,13 +57,13 @@ fx:controller="songLabController">
                                 </rowConstraints>
                                  <children>
                                     <Label text="Song" />
-                                    <Label text="Counting Star" GridPane.columnIndex="1" />
+                                    <Label fx:id="songDetail" text="Counting Star" GridPane.columnIndex="1" />
                                     <Label text="Artist" GridPane.rowIndex="1" />
-                                    <Label text="OneRepublic" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                                    <Label fx:id="artistDetail" text="OneRepublic" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                                     <Label text="Year of Release" GridPane.rowIndex="2" />
                                     <Label text="album" GridPane.rowIndex="3" />
-                                    <Label text="2013" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                                    <Label text="Native" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                                    <Label fx:id="yearDetail" text="2013" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                                    <Label fx:id="albumDetail" text="Native" GridPane.columnIndex="1" GridPane.rowIndex="3" />
                                  </children>
                               </GridPane>
                            </children>
@@ -73,10 +71,10 @@ fx:controller="songLabController">
                       <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="52.0" prefWidth="657.0">
                            <children>
                               <Button layoutX="553.0" layoutY="68.0" mnemonicParsing="false" onAction="#addMusic" prefHeight="55.0" prefWidth="74.0" text="Add" />
-                              <TextField layoutX="350.0" layoutY="47.0" onAction="#newYear" />
-                              <TextField layoutX="350.0" layoutY="123.0" onAction="#newAlbum" />
-                              <TextField layoutX="90.0" layoutY="47.0" onAction="#newSong" />
-                              <TextField layoutX="90.0" layoutY="123.0" onAction="#newArtist" />
+                              <TextField fx:id="newYear" layoutX="350.0" layoutY="47.0" onAction="#newYear" />
+                              <TextField fx:id="newAlbum" layoutX="350.0" layoutY="123.0" onAction="#newAlbum" />
+                              <TextField fx:id="newSong" layoutX="90.0" layoutY="47.0" onAction="#newSong" />
+                              <TextField fx:id="newArtist" layoutX="90.0" layoutY="123.0" onAction="#newArtist" />
                               <Label layoutX="26.0" layoutY="51.0" text="Song" />
                               <Label layoutX="26.0" layoutY="127.0" text="Artist" />
                               <Label layoutX="289.0" layoutY="51.0" text="Year" />
