--- a/pj1/bin/application/app.fxml
+++ b/pj1/bin/application/app.fxml
@@ -2,9 +2,8 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.SplitPane?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -21,12 +20,9 @@
                     <items>
                       <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
                            <children>
-                              <TableView fx:id="list" layoutX="29.0" layoutY="157.0" prefHeight="560.0" prefWidth="257.6" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                                <columns>
-                                  <TableColumn fx:id="songColumn" prefWidth="124.00000005960464" text="C1" />
-                                  <TableColumn fx:id="artistColumn" prefWidth="133.60006713867188" text="C2" />
-                                </columns>
-                              </TableView>
+                              <ListView fx:id="list" layoutX="29.0" prefHeight="525.0" prefWidth="258.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                              <Label layoutX="23.0" layoutY="14.0" text="Song" />
+                              <Label layoutX="129.0" layoutY="14.0" text="Artist" />
                            </children>
                         </AnchorPane>
                       <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
@@ -57,13 +53,13 @@
                                 </rowConstraints>
                                  <children>
                                     <Label text="Song" />
-                                    <Label text="Label" GridPane.rowIndex="1" />
-                                    <Label text="Label" GridPane.rowIndex="2" />
-                                    <Label text="Label" GridPane.rowIndex="3" />
-                                    <Label text="Label" GridPane.columnIndex="1" />
-                                    <Label text="Label" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                                    <Label text="Label" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                                    <Label text="Label" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                                    <Label text="artist" GridPane.rowIndex="1" />
+                                    <Label text="album" GridPane.rowIndex="2" />
+                                    <Label text="year" GridPane.rowIndex="3" />
+                                    <Label fx:id="songLabel" text="Label" GridPane.columnIndex="1" />
+                                    <Label fx:id="artistLabel" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                                    <Label fx:id="albumLabel" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                                    <Label fx:id="yearLabel" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="3" />
                                  </children>
                               </GridPane>
                            </children>
@@ -90,10 +86,11 @@
                                     <Label text="Label" GridPane.rowIndex="1" />
                                     <Label text="Label" GridPane.columnIndex="3" />
                                     <Label text="Label" GridPane.columnIndex="3" GridPane.rowIndex="1" />
-                                    <TextArea prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" />
-                                    <TextArea prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                                    <TextArea prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="4" />
-                                    <TextArea prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="4" GridPane.rowIndex="1" />
+                                    <TextArea fx:id="newSong" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" />
+                                    <TextArea fx:id="newArtist" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                                    <TextArea fx:id="newAblum" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="4" />
+                                    <TextArea fx:id="newYear" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="4" GridPane.rowIndex="1" />
+                                    <Label prefHeight="15.0" prefWidth="137.0" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                                  </children>
                               </GridPane>
                            </children>
